# export_photos_to_nextcloud

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  __main__.py  config.yaml.example  export_photos_to_nextcloud.py  pyproject.toml  requirements.txt  test_export_tool_pytest.py  test_package.sh
export_photos_to_nextcloud_pkg/: __init__.py  __main__.py  load_yaml_config.py  main.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
tests/: test_export_tool_pytest.py
