[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "export-photos-to-nextcloud"
version = "1.0.0"
description = "A modern Python tool for exporting photos from Apple Photos.app and syncing them to Nextcloud"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL3.0-or-later"}
authors = [
    {name = "Dr. Andrew Cox", email = "dev@andrewcox.doctor"}
]
keywords = ["photos", "export", "nextcloud", "osxphotos", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GPL3.0-or-later License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "osxphotos>=0.72.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
export-photos-to-nextcloud = "export_photos_to_nextcloud.__main__:main"

[project.urls]
Homepage = "https://github.com/sealad886/export-photos-to-nextcloud"
Repository = "https://github.com/sealad886/export-photos-to-nextcloud.git"
Issues = "https://github.com/sealad886/export-photos-to-nextcloud/issues"

[tool.setuptools.packages.find]
include = ["export_photos_to_nextcloud*"]

[tool.setuptools.package-data]
export_photos_to_nextcloud = ["*.txt", "*.md"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["export_photos_to_nextcloud"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "test_export_tool_pytest.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: marks tests with timeout settings",
]
